# modern-cpp-project

./: CMakeLists.txt  LICENSE  README.md  build-debug.sh  gencode_coverage.sh  run_benchmark.sh
.github/workflows/: benchmark.yml  build.yml  converage.yml  release.yml
benchmark/: CMakeLists.txt  ProjectBenchmarks.cpp
dev/bench/: data.js
doc/: Doxyfile  mainpage.dox
src/: CMakeLists.txt  main.cpp
src/implementation/: ConstExprCalculation.cpp  ConstExprCalculation.h  Factory.cpp  RunTimeCalculation.cpp  RunTimeCalculation.h
src/interface/: Calculation.h  Factory.h
src/utils/: EvaluationFunctions.h  LookUpTable.h
test/: CMakeLists.txt  ConstExprTests.cpp  RunTimeTests.cpp
